fixed spacing on browse pagination

--- a/css/screen.css
+++ b/css/screen.css
@@ -2407,20 +2407,25 @@ nav + .exhibit {
   margin-top: 1.5em;
 }
 
+/* line 268, ../sass/breakpoints/_base.scss */
+div.pagination {
+  width: 100%;
+}
+
 /* @end */
 /* @group ----- Home Page ----- */
-/* line 270, ../sass/breakpoints/_base.scss */
+/* line 274, ../sass/breakpoints/_base.scss */
 #home #primary {
   margin: 0;
   padding-right: 10px;
 }
 
-/* line 274, ../sass/breakpoints/_base.scss */
+/* line 278, ../sass/breakpoints/_base.scss */
 .record {
   width: inherit;
 }
 
-/* line 277, ../sass/breakpoints/_base.scss */
+/* line 281, ../sass/breakpoints/_base.scss */
 #home #secondary {
   float: right;
   float: left;
@@ -2431,13 +2436,13 @@ nav + .exhibit {
   padding-left: 10px;
 }
 
-/* line 286, ../sass/breakpoints/_base.scss */
+/* line 290, ../sass/breakpoints/_base.scss */
 #home #content h2 {
   text-transform: uppercase;
   letter-spacing: .1em;
 }
 
-/* line 290, ../sass/breakpoints/_base.scss */
+/* line 294, ../sass/breakpoints/_base.scss */
 .featured,
 #featured-exhibit,
 #featured-item,
@@ -2448,19 +2453,19 @@ nav + .exhibit {
   margin-bottom: 1.5em;
 }
 
-/* line 299, ../sass/breakpoints/_base.scss */
+/* line 303, ../sass/breakpoints/_base.scss */
 .featured h2,
 #featured-exhibit h2 {
   margin: 0;
 }
 
-/* line 303, ../sass/breakpoints/_base.scss */
+/* line 307, ../sass/breakpoints/_base.scss */
 .featured h3,
 #featured-exhibit h3 {
   margin: 0 0 1em;
 }
 
-/* line 307, ../sass/breakpoints/_base.scss */
+/* line 311, ../sass/breakpoints/_base.scss */
 .featured img,
 #featured-exhibit img {
   float: left;
@@ -2471,29 +2476,29 @@ nav + .exhibit {
   background-color: #fff;
 }
 
-/* line 317, ../sass/breakpoints/_base.scss */
+/* line 321, ../sass/breakpoints/_base.scss */
 #recent-items .item {
   overflow: hidden;
   border-bottom: 1px solid #ccc;
   margin-bottom: 1.5em;
 }
 
-/* line 322, ../sass/breakpoints/_base.scss */
+/* line 326, ../sass/breakpoints/_base.scss */
 #recent-items .item .image {
   height: 6em;
 }
 
-/* line 325, ../sass/breakpoints/_base.scss */
+/* line 329, ../sass/breakpoints/_base.scss */
 #recent-items .item h3 {
   margin-top: 0;
 }
 
-/* line 329, ../sass/breakpoints/_base.scss */
+/* line 333, ../sass/breakpoints/_base.scss */
 .view-items-link {
   margin-bottom: 0em;
 }
 
-/* line 333, ../sass/breakpoints/_base.scss */
+/* line 337, ../sass/breakpoints/_base.scss */
 #recent-items .item-description,
 #featured-item .item-description {
   display: inline-block;
@@ -2502,56 +2507,56 @@ nav + .exhibit {
 
 /* @end */
 /* @group ----- Other plugin styles ----- */
-/* line 341, ../sass/breakpoints/_base.scss */
+/* line 345, ../sass/breakpoints/_base.scss */
 #exhibit-pages {
   float: left;
 }
-/* line 343, ../sass/breakpoints/_base.scss */
+/* line 347, ../sass/breakpoints/_base.scss */
 #exhibit-pages h4, #exhibit-pages li {
   padding: 0 10px;
 }
 
-/* line 347, ../sass/breakpoints/_base.scss */
+/* line 351, ../sass/breakpoints/_base.scss */
 #exhibit-blocks, .exhibits #content #primary {
   float: right;
 }
 
-/* line 350, ../sass/breakpoints/_base.scss */
+/* line 354, ../sass/breakpoints/_base.scss */
 .exhibits #content > h1:first-of-type {
   text-align: left;
 }
 
-/* line 353, ../sass/breakpoints/_base.scss */
+/* line 357, ../sass/breakpoints/_base.scss */
 .exhibits.browse #content > h1:first-of-type {
   width: 100%;
 }
 
-/* line 354, ../sass/breakpoints/_base.scss */
+/* line 358, ../sass/breakpoints/_base.scss */
 #collection-tree {
   margin-left: auto;
   margin-right: auto;
 }
 
-/* line 359, ../sass/breakpoints/_base.scss */
+/* line 363, ../sass/breakpoints/_base.scss */
 #recaptcha_area input {
   display: inline;
 }
 
 /* @end */
 /* @group ----- Browse-all ----- */
-/* line 365, ../sass/breakpoints/_base.scss */
+/* line 369, ../sass/breakpoints/_base.scss */
 .browse-attribution {
   font-style: italic;
   margin-bottom: .75em;
 }
 
-/* line 370, ../sass/breakpoints/_base.scss */
+/* line 374, ../sass/breakpoints/_base.scss */
 .page-meta {
   float: left;
   font-style: italic;
 }
 
-/* line 375, ../sass/breakpoints/_base.scss */
+/* line 379, ../sass/breakpoints/_base.scss */
 .page-meta p {
   margin-top: 0;
 }
