--- a/sass/breakpoints/_base.scss
+++ b/sass/breakpoints/_base.scss
@@ -265,6 +265,10 @@ nav + .exhibit {
   margin-top: 1.5em;
 }
 
+div.pagination {
+  width: 100%;
+}
+
 /* @end */
 /* @group ----- Home Page ----- */
 #home #primary {
